--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
             margin-left: 20px;
             border-radius: 3px;
         }
+        #footer {
+            position: absolute;
+            height: auto;
+            width: 100%;
+            overflow: hidden;
+            left: 0;
+            background-color: #24252d;
+            color: white;
+            text-align: left;
+            padding:10px 20px 10px 20px;
+            font-size:10px;
+        }
     </style>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -83,6 +95,15 @@
     <div align="center">
         <div class="Canvas" style="display: inline-block; background-image: url(../assets/bg/zgreen.png); background-size: 100%; background-repeat: no-repeat;" id="L2dCanvas"></div>
     </div>
+
+    <footer id="false" style="height:70px;width:100%;margin-top: 20px;">
+    </footer>
+
+    <footer id="footer">
+        Azur Lane © is owned by Shanghai Manjuu, Xiamen Yongshi, Shanghai Yostar | All logos and trademarks are property of their respective owners.<br>
+        /alg/ wiki © 2019. This is a non-profit website. 
+        For concerns and feedback, send a mail to alg.4chan@gmail.com
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
