--- a/index.html
+++ b/index.html
@@ -67,12 +67,30 @@
             padding:10px 20px 10px 20px;
             font-size:10px;
         }
+        table.wikitable {
+            margin: 1em 0;
+            background-color: #373743;
+            border-style: solid;
+            border-width: 1px;
+            border-color: #5c5d70;
+            border-collapse: collapse;
+            color: #ffffff;
+            height: 100%;
+            width: 100%;
+        }
+        table.wikitable td {
+            border-style: solid;
+            border-width: 1px;
+            border-color: #5c5d70;
+            border-collapse: collapse;
+        }
     </style>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body style="background-color: #494a5a; color: white;">
     <a href='https://ko-fi.com/K3K71DGPS' target='_blank'><img height='36' style='border:0px;height:36px; position: absolute; top: 1%; right: 1%' src='https://az743702.vo.msecnd.net/cdn/kofi2.png?v=2' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+    <button type="button" class="btn btn-secondary" style="position: absolute; top: 1%; left: 1%" onclick="onChangeLog()">Changelog</button>
     <div align="center">
                 <h1>Azur Lane Live2D Viewer</h1>
             </div>
