--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"> </script>
-    <script src="js/live2dcubismcore.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/HCLonely/Live2dV3/js/live2dcubismcore.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pixi.js@4.6.1/dist/pixi.min.js"></script>
-    <script src="/live2dv3.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/HCLonely/Live2dV3/live2dv3.min.js"></script>
     <script>
         $(document).ready(() => {
             new l2dViewer({
-                basePath: 'assets',
+                basePath: 'https://cdn.jsdelivr.net/gh/HCLonely/Live2dV3/',
                 modelName: 'biaoqiang_3',
                 width: 500,
                 height: 300
