--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body style="background-color: #00ff00;">
+    <h1>第一次加载较慢，请耐心等待！</h1>
+    <h1>The first load slowly, please be patient!</h1>
+    
     <div class="Canvas" style="position: fixed; right: 10px; bottom: 10px;" id="L2dCanvas"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js"></script>
