--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"> </script>
     <script src="https://cdn.jsdelivr.net/gh/HCLonely/Live2dV3/js/live2dcubismcore.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pixi.js@4.6.1/dist/pixi.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/HCLonely/Live2dV3/live2dv3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/HCLonely/Live2dV3@1.0.0/live2dv3.min.js"></script>
     <script>
         $(document).ready(() => {
             new l2dViewer({
