--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"> </script>
     <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pixi.js@4.6.1/dist/pixi.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/HCLonely/Live2dV3@1.1.2/live2dv3.min.js"></script>
+    <script src="/live2dv3.js"></script>
     <script>
         window.onload = () => {
             new l2dViewer({
