添加声音播放功能

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
                 width: 500,
                 height: 300,
                 sizeLimit: false,
-                mobileLimit: false 
+                mobileLimit: false,
+                sounds: [
+                    'sounds/demo.mp3',
+                    'https://cdn.jsdelivr.net/gh/HCLonely/Live2dV3@latest/asset/biaoqiang_3/sounds/demo.mp3'
+                ]
             })
         }
     </script>
