--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         window.onload = () => {
             new l2dViewer({
                 el: document.getElementById('L2dCanvas'),
-                basePath: 'https://cdn.jsdelivr.net/gh/HCLonely/Live2dV3/assets',
+                basePath: 'https://cdn.jsdelivr.net/npm/live2dv3@latest/assets',
                 modelName: 'biaoqiang_3',
                 width: 500,
                 height: 300,
@@ -29,7 +29,7 @@
                 mobileLimit: false,
                 sounds: [
                     'sounds/demo.mp3',
-                    'https://cdn.jsdelivr.net/gh/HCLonely/Live2dV3@latest/asset/biaoqiang_3/sounds/demo.mp3'
+                    'https://cdn.jsdelivr.net/npm/live2dv3@latest/assets/biaoqiang_3/sounds/demo.mp3'
                 ]
             })
         }
