--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="Canvas" style="position: fixed; right: 10px; bottom: 10px;z-index: 99999999" id="L2dCanvas"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/howler@2.1.3/dist/howler.min.js"></script>
     <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/pixi.js@4.6.1/dist/pixi.min.js"></script>
     <script src="/live2dv3.js"></script>
@@ -21,7 +22,7 @@
         window.onload = () => {
             new l2dViewer({
                 el: document.getElementById('L2dCanvas'),
-                basePath: 'https://cdn.jsdelivr.net/npm/live2dv3@1.2.0/assets',
+                basePath: 'https://cdn.jsdelivr.net/npm/live2dv3@latest/assets',
                 modelName: 'biaoqiang_3',
                 width: 500,
                 height: 300,
@@ -29,7 +30,7 @@
                 mobileLimit: false,
                 sounds: [
                     'sounds/demo.mp3',
-                    'https://cdn.jsdelivr.net/npm/live2dv3@1.2.0/assets/biaoqiang_3/sounds/demo.mp3'
+                    'https://cdn.jsdelivr.net/npm/live2dv3@latest/assets/biaoqiang_3/sounds/demo.mp3'
                 ]
             })
         }
